# place

./: README.md  asset-manifest.json  index.html  precache-manifest.00636bdf8f671cc9fa87cf65b03b28c6.js  precache-manifest.23aa7f08276ba27776770532673d22f0.js  precache-manifest.588b0c17bb797efaca68a6d26141dd2d.js  precache-manifest.5ea8bab521fd6e11ce135a384331f898.js  precache-manifest.633cfb5f7aaad884db313d2dc13f9281.js  precache-manifest.6b4c2de2ded2578eee3c4acc90ff27bd.js  precache-manifest.7b6383541b21cd258d2fa1317e24204e.js  precache-manifest.96017e95cb4e92638c9dfbe6539fe74b.js  precache-manifest.a52645f5a7f27d4fe2c947a2819d9129.js  precache-manifest.ebc6639a54b6d8d78ae247c221fa3573.js  service-worker.js
contract-rs/pixel-board/: Cargo.toml  README.md  build.sh
contract-rs/pixel-board/res/: avocado.wasm  near_place.wasm
contract-rs/pixel-board/src/: account.rs  board.rs  fungible_token_core.rs  fungible_token_metadata.rs  internal.rs  lib.rs  token.rs
frontend/: package.json
frontend/public/: CNAME  index.html  manifest.json
frontend/src/: App.css  App.js  App.scss  Weapons.js  Weapons.scss
static/css/: main.27264ffc.chunk.css  main.27264ffc.chunk.css.map  main.979661c3.chunk.css  main.979661c3.chunk.css.map
static/js/: 2.21efe889.chunk.js  2.21efe889.chunk.js.map  2.3cff000b.chunk.js  2.3cff000b.chunk.js.map  2.a0d3e8c2.chunk.js  2.a0d3e8c2.chunk.js.LICENSE.txt  2.a0d3e8c2.chunk.js.map  main.24a531e8.chunk.js  main.24a531e8.chunk.js.map  main.25eb1cb7.chunk.js  main.25eb1cb7.chunk.js.map  main.35a7500b.chunk.js  main.35a7500b.chunk.js.map  (+16 more)
